--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,10 @@ project(marks_chess_engine VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 set(CMAKE_BUILD_TYPE Debug)
-#set(CMAKE_CXX_FLAGS_DEBUG "-g -O0 -DDEBUG")
 set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+
+# Find threading library
+find_package(Threads REQUIRED)
 
 # Add the source files from the src/ directory
 file(GLOB_RECURSE SOURCES src/*.cpp)
@@ -19,3 +21,6 @@ set(CMAKE_OBJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/obj)
 
 # Add the executable
 add_executable(marks_chess_engine ${SOURCES})
+
+# Link threading library
+target_link_libraries(marks_chess_engine Threads::Threads)
