WIP: Add unit tests skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,14 @@ find_package(Threads REQUIRED)
 file(GLOB_RECURSE SOURCES src/*.cpp)
 
 # Specify the output directories
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
-set(CMAKE_OBJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/obj)
+#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
+#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
+#set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
+#set(CMAKE_OBJECT_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build/obj)
 
-# Add the executable
-add_executable(marks_chess_engine ${SOURCES})
+# Define the main executable as a bunch of libraries linked together
+add_library(marks_chess_engine_lib STATIC ${SOURCES})
+add_executable(marks_chess_engine src/main.cpp)
+target_link_libraries(marks_chess_engine marks_chess_engine_lib Threads::Threads)
 
-# Link threading library
-target_link_libraries(marks_chess_engine Threads::Threads)
+add_subdirectory(test)
